--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@ div.clip-path-container {
 }
 
 .waffle {
-  background-image: url('https://cdn1.imggmi.com/uploads/2019/6/26/3a4794bfaea5e64151d2672dfea968e2-full.jpg');
+  background-image: url('http://i63.tinypic.com/28tkrpz.jpg');
   background-position: 0 0;
 }
 
